--- a/frontend/src/components/IS_Components/header/Header.css
+++ b/frontend/src/components/IS_Components/header/Header.css
@@ -1,10 +1,11 @@
 .header {
-    margin-top: 60px;
+    margin-top: 30px;
   }
   
   .headerImg{
-    width: 100%;
-    height: 450px;
-    margin-top: 80px;
+    margin-left: 70px;
+    border-radius: 30px;
+    width: 90%;
+    height: 300px;
     object-fit: cover;
 }
